--- a/Steckbrief/Aufgabe_0.html
+++ b/Steckbrief/Aufgabe_0.html
@@ -13,5 +13,5 @@ body {
 <body>
     
     <h1>Aufgabe 0</h1>
-    <p> have a nice day! </p>
+    <p> Hi ich heiße Corinna, have a nice day! </p>
 </html>
