--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,7 +12,7 @@ body {
 </style>
 </head>
 <body>
-	<a href="https://sailerco.github.io/GIS_MIB2/Steckbrief/Aufgabe_0.html">Aufgabe 0, 22.04.2020</a>
+	<a href="https://sailerco.github.io/GIS_MIB2/Steckbrief/Aufgabe_0.html" target="_blank">Aufgabe 0, 22.04.2020</a>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 </body>
 </html>
