--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,7 +13,7 @@ body {
 </head>
 <body>
 	<a href="https://sailerco.github.io/GIS_MIB2/Steckbrief/Aufgabe_0.html" target="_blank">Aufgabe 0, 22.04.2020</a> <br>
-	<a href="https://github.com/sailerco/GIS_MIB2/tree/master/Aufgabe%201" target="_blank">Aufgabe 1, 27.04.2020</a> <br>
+	<a href="https://github.com/sailerco/GIS_MIB2/blob/master/Aufgabe%201/Steckbrief_Corinna.html" target="_blank">Aufgabe 1, 27.04.2020</a> <br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 </body>
 </html>
