--- a/Aufgabe 1/Steckbrief_Corinna.html
+++ b/Aufgabe 1/Steckbrief_Corinna.html
@@ -4,8 +4,8 @@
     <head>
         <tilte>Steckbrief</tilte>
     </head>
-    <body style = "background-color:aliceblue">
-        <h1 style="font-family: Arial;">Steckbrief</h1>
+    <body style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+        <h1>Steckbrief</h1>
         <h2>Inhalt</h2>
         <ul>
             <li> <a href="#me">Über mich</a></li>
@@ -28,10 +28,15 @@
         
         <h3 id="sonstiges">Hier noch ein paar Links</h3>
         <p>
-            Hier noch ein paar coole Menschen
-            <a href="https://simon-za.github.io/GIS-SoSe-2020/Aufgabe_00.html" target="_blank">Simon</a> </il>
-            <a href="https://janinacpb.github.io/GIS-SoSe-2020/Aufgabe01/aufgabe2.html" target="_blank"><il> Janina</a>
-            
-            und zu guter letzt ist <a href="https://www.youtube.com/watch?v=hEesjCRR2hw">hier</a> noch ein Lehrreiches Video</p>
+            Hier noch ein paar coole Menschen<br>
+            the tree Js: <br>
+            <a href="https://jk-jacki.github.io/GIS_SoSe2020/Aufgabe01/" target="_blank"><b>J</b>acki</a><br>
+            <a href="https://janinacpb.github.io/GIS-SoSe-2020/Aufgabe01/aufgabe2.html" target="_blank"><b>J</b>anina</a><br>
+            <a href="https://yamidesu.github.io/GIS-SoSe-2020/Aufgaben/Aufgabe_01_2020-04-29/index.html" target="_blank"><b>J</b>ustin</a><br>
+            und dann gibts noch <a href="https://simon-za.github.io/GIS-SoSe-2020/Aufgabe_00.html" target="_blank">Simon</a><br>
+            und zu guter letzt ist <a href="https://www.youtube.com/watch?v=hEesjCRR2hw">hier</a> noch ein Lehrreiches Video
+            <br>
+            BYE
+        </p>
     </body>
 </html>
