--- a/Aufgabe 1/index.html
+++ b/Aufgabe 1/index.html
@@ -13,7 +13,7 @@
             <li> <a href="sonstiges">Links</a></li>
         </ul>
         
-            <img src="https://github.com/sailerco/GIS_MIB2/blob/master/Aufgabe%201/Selfie.jpg">
+            <img src="https://sailerco.github.io/GIS_MIB2/Aufgabe%201/Selfie.jpg">
         <h3 id="me">Über mich</h3>
             <p>
                 <b>Name:</b> Corinna Jasmin Sailer<br>
