--- a/Aufgabe 1/index.html
+++ b/Aufgabe 1/index.html
@@ -4,7 +4,7 @@
     <head>
         <tilte>Steckbrief</tilte>
     </head>
-    <body style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+    <body>
         <h1>Steckbrief</h1>
         <h2>Inhalt</h2>
         <ul>
