--- a/Aufgabe 1/index.html
+++ b/Aufgabe 1/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li> <a href="#me">Über mich</a></li>
             <li> <a href="#studium">Mein Studium</a></li>
-            <li> <a href="sonstiges">Links</a></li>
+            <li> <a href="#sonstiges">Links</a></li>
         </ul>
         
             <img src="https://sailerco.github.io/GIS_MIB2/Aufgabe%201/Selfie.jpg">
@@ -34,7 +34,7 @@
             <a href="https://janinacpb.github.io/GIS-SoSe-2020/Aufgabe01/aufgabe2.html" target="_blank"><b>J</b>anina</a><br>
             <a href="https://yamidesu.github.io/GIS-SoSe-2020/Aufgaben/Aufgabe_01_2020-04-29/index.html" target="_blank"><b>J</b>ustin</a><br>
             und dann gibts noch <a href="https://simon-za.github.io/GIS-SoSe-2020/Aufgabe_00.html" target="_blank">Simon</a><br>
-            und zu guter letzt ist <a href="https://www.youtube.com/watch?v=hEesjCRR2hw">hier</a> noch ein Lehrreiches Video
+            und zu guter letzt ist <a href="https://www.youtube.com/watch?v=hEesjCRR2hw" target="_blank">hier</a> noch ein Lehrreiches Video
             <br>
             BYE
         </p>
