--- a/Aufgabe 1/index.html
+++ b/Aufgabe 1/index.html
@@ -23,18 +23,18 @@
                 <b>Studiengang:</b> MIB<br>
             </p>    
         <h3 id="studium">Mein Studium</h3>
-        <p>Ich studiere in Furtwangen (wow was für eine Überraschung) Medieniformatik im 2. Semester. <br> 
-        Bisher macht mir das Studium sehr viel Spaß, mal hoffen das es so bleibt xD</p>
+        <p>Ich studiere in Furtwangen (wow was für eine Überraschung) Medieninformatik im 2. Semester. <br> 
+        Bisher macht mir das Studium sehr viel Spaß, mal hoffen, dass es so bleibt xD</p>
         
         <h3 id="sonstiges">Hier noch ein paar Links</h3>
         <p>
             Hier noch ein paar coole Menschen<br>
-            the tree Js: <br>
+            the three Js: <br>
             <a href="https://jk-jacki.github.io/GIS_SoSe2020/Aufgabe01/" target="_blank"><b>J</b>acki</a><br>
             <a href="https://janinacpb.github.io/GIS-SoSe-2020/Aufgabe01/aufgabe2.html" target="_blank"><b>J</b>anina</a><br>
             <a href="https://yamidesu.github.io/GIS-SoSe-2020/Aufgaben/Aufgabe_01_2020-04-29/index.html" target="_blank"><b>J</b>ustin</a><br>
             und dann gibts noch <a href="https://simon-za.github.io/GIS-SoSe-2020/Aufgabe_00.html" target="_blank">Simon</a><br>
-            und zu guter letzt ist <a href="https://www.youtube.com/watch?v=hEesjCRR2hw" target="_blank">hier</a> noch ein Lehrreiches Video
+            und zu guter Letzt ist <a href="https://www.youtube.com/watch?v=hEesjCRR2hw" target="_blank">hier</a> noch ein lehrreiches Video
             <br>
             <br>
             <br>
