--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,7 +12,7 @@ body {
 </style>
 </head>
 <body>
-	<a href="https://github.com/sailerco/GIS_MIB2/issues" target="_blank">Issues</a>
+	<a href="https://github.com/sailerco/GIS_MIB2/issues" target="_blank">Issues</a><br>
 	<a href="https://sailerco.github.io/GIS_MIB2/Aufgabe%201/index.html" target="_blank">Aufgabe 1, 28.04.2020</a> <br>
 	<a href="https://sailerco.github.io/GIS_MIB2/Steckbrief/Aufgabe_0.html" target="_blank">Aufgabe 0, 22.04.2020</a> <br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
