index, links update

--- a/Aufgabe 1/index.html
+++ b/Aufgabe 1/index.html
@@ -2,7 +2,8 @@
 <html>
 
     <head>
-        <tilte>Steckbrief</tilte>
+        <meta charset="utf-8">
+        <title>Corinna Sailer</title>
     </head>
     <body>
         <h1>Steckbrief</h1>
@@ -31,9 +32,9 @@
             Hier noch ein paar coole Menschen<br>
             the three Js: <br>
             <a href="https://jk-jacki.github.io/GIS_SoSe2020/Aufgabe01/" target="_blank"><b>J</b>acki</a><br>
-            <a href="https://janinacpb.github.io/GIS-SoSe-2020/Aufgabe01/aufgabe2.html" target="_blank"><b>J</b>anina</a><br>
+            <a href="https://janinacpb.github.io/GIS-SoSe-2020/Aufgabe01/aufgabe1.html" target="_blank"><b>J</b>anina</a><br>
             <a href="https://yamidesu.github.io/GIS-SoSe-2020/Aufgaben/Aufgabe_01_2020-04-29/index.html" target="_blank"><b>J</b>ustin</a><br>
-            und dann gibts noch <a href="https://simon-za.github.io/GIS-SoSe-2020/Aufgabe_00.html" target="_blank">Simon</a><br>
+            und dann gibts noch <a href="https://simon-za.github.io/GIS-SoSe-2020/Aufgaben/Aufgabe_01.html" target="_blank">Simon</a><br>
             und zu guter Letzt ist <a href="https://www.youtube.com/watch?v=hEesjCRR2hw" target="_blank">hier</a> noch ein lehrreiches Video
             <br>
             <br>
