--- a/Aufgabe_2/me.html
+++ b/Aufgabe_2/me.html
@@ -2,20 +2,42 @@
 <html>
 
     <head>
-        <tilte></tilte>
+        <meta charset="utf-8">
+        <tilte>Corinna Sailer - About me</tilte>
     </head>
 
     <body>
-        <h1>Portfolio</h1>
-        <h2>
-            About me • Contact me
-        </h2>
-        <p><img src="https://images.unsplash.com/photo-1492112007959-c35ae067c37b?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" width="25%">
-        <img src="https://images.unsplash.com/photo-1511406361295-0a1ff814c0ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" width="25%">
-         <br>
-        <img src="https://images.unsplash.com/photo-1516410529446-2c777cb7366d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" width="25%">
-        <img src="https://images.unsplash.com/photo-1500099817043-86d46000d58f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" width="25%">
-        </p>
+        <h1>About me</h1>
+        <nav>
+            <h2>
+                <a href="Portfolio.html">Portfolio</a> •
+                <a href="contact.html">Contact me</a> 
+            </h2>
+        </nav>
+        <img src="https://sailerco.github.io/GIS_MIB2/Aufgabe%201/Selfie.jpg">
         
+            <p>
+                <b>Name:</b> Corinna Jasmin Sailer<br>
+                <b>Spitzname:</b> Coco<br>
+                <b>Hobbies:</b> Zocken, Zeichnen, lesen<br>
+                <b>Hochschule:</b> Furtwangen<br>
+                <b>Studiengang:</b> MIB<br>
+            </p> 
+            <section>
+        <h3 id="studium">Mein Studium</h3>
+        <p>Ich studiere in Furtwangen (wow was für eine Überraschung) Medieninformatik im 2. Semester. <br> 
+        Bisher macht mir das Studium sehr viel Spaß, mal hoffen, dass es so bleibt xD</p>
+            </section>
+        <h3>Kenntnisse in</h3>
+        <p>
+            <ul>
+                <li>InDesign, Illustrator, Photoshop, Premiere Pro, 
+                    After Effects, Dreamweaver</li>
+                <li>HTML5, CSS</li>
+                <li>CAD</li>
+                <li>3D-Modellierung</li>
+                <li>Java</li>
+            </ul>
+        </p>
     </body>
 </html>
