--- a/Aufgabe_2/Portfolio.html
+++ b/Aufgabe_2/Portfolio.html
@@ -37,7 +37,8 @@
                 <audio src="I_m_Happy_For_This_Guitar.mp3" controls></audio>
             <h3>Mein kleiner Donut</h3>
                 <img src="donut.png">    <br>
-            <object data="Präsentation.pdf" type="application/pdf"></object>
+            
+                <object data="Präsentation.pdf" type="application/pdf" width="450px"></object>
         </main>
         <br>
         <br>
