--- a/Aufgabe_2/Portfolio.html
+++ b/Aufgabe_2/Portfolio.html
@@ -36,9 +36,9 @@
             <h3>Musik</h3>
                 <audio src="I_m_Happy_For_This_Guitar.mp3" controls></audio>
             <h3>Mein kleiner Donut</h3>
-                <img src="donut.png">    <br>
-            
-                <object data="Präsentation.pdf" type="application/pdf" width="450px"></object>
+                <img src="donut.png" width="450px">    <br>
+            <h3>Und hier ist eine uralte Präsentatio über Arts and Crafts</h3>
+                <object data="Präsentation.pdf" type="application/pdf" width="450px" height="450px"></object>
         </main>
         <br>
         <br>
