--- a/Aufgabe_2/Portfolio.html
+++ b/Aufgabe_2/Portfolio.html
@@ -19,6 +19,9 @@
         </nav>
 
         <main>
+            <h3>Musik</h3>
+                <p>erstmal etwas Musik</p>
+                <audio src="I_m_Happy_For_This_Guitar.mp3" controls>I'm happy for this guitar</audio>
             <h3>Photography</h3>
                 <img src="BrennendeBlume.jpg" alt="Brennende Blume" width="220px">
                 <img src="Gang.jpg" alt="dunkler Gang" width="220px">
@@ -33,12 +36,10 @@
             <h3>Videos</h3>
                 <video src="https://player.vimeo.com/external/231759067.sd.mp4?s=33daca45c35e6400abd8133adb2a226cbb2c07f1&profile_id=164" controls width="450px"></video>
     
-            <h3>Musik</h3>
-                <audio src="I_m_Happy_For_This_Guitar.mp3" controls></audio>
             <h3>Mein kleiner Donut</h3>
                 <img src="donut.png" width="450px">    <br>
-            <h3>Und hier ist eine uralte Präsentatio über Arts and Crafts</h3>
-                <object data="Präsentation.pdf" type="application/pdf" width="450px" height="450px"></object>
+            <h3>Und hier ist eine uralte Präsentation über Arts and Crafts</h3>
+                <object data="Präsentation.pdf" type="application/pdf" width="450px" height="300px"></object>
         </main>
         <br>
         <br>
