--- a/Aufgabe_2/Portfolio.html
+++ b/Aufgabe_2/Portfolio.html
@@ -41,9 +41,12 @@
                 <img src="donut.png" width="450px">    <br>
             <h3>Und hier ist eine uralte Präsentation über Arts and Crafts</h3>
                 <object data="Präsentation.pdf" type="application/pdf" width="450px" height="300px"></object>
-            <h3></h3>
-                <img src="Logo.jpg">
-                <img src="Saftladen Logo.jpg">
+            <h3>Logos</h3>
+                <img src="Logo.jpg" width="450px"><br>
+                Ein Logo für ein Schulprojekt.<br>
+                <br>
+                <img src="Saftladen Logo.jpg" width="450px"><br>
+                Ein Logo für BWL letztes Semester.
         </main>
         <br>
         <br>
