--- a/Aufgabe_2/Portfolio.html
+++ b/Aufgabe_2/Portfolio.html
@@ -35,7 +35,8 @@
             
             <h3>Videos</h3>
             <!--    <video src="https://player.vimeo.com/external/231759067.sd.mp4?s=33daca45c35e6400abd8133adb2a226cbb2c07f1&profile_id=164" controls width="450px"></video>-->
-            <video srx="C:\Users\Corinna\Documents\GIS_MIB2\Aufgabe_2\Ink - 21536.mp4" controls width="450px" ></video>
+            <video src="C:\Users\Corinna\Documents\GIS_MIB2\Aufgabe_2\Ink - 21536.mp4" controls width="450px" ></video>
+
             <p>und jetzt kommen Sachen dich tatsächlich gemacht habe:</p>
             <h3>Mein kleiner Donut</h3>
                 <img src="donut.png" width="450px">    <br>
