--- a/Aufgabe_2/tags_used.html
+++ b/Aufgabe_2/tags_used.html
@@ -2,47 +2,85 @@
 <html>
 
     <head>
-        
+        <meta charset="utf-8">
         <tilte>genutzte tags</tilte>
     </head>
+
     <body>
-        <table border="1">
+        <p>X = no<br>
+            &#10003; = yes</p>
+        <table border="2">
             <tr>
-                <th>name</th>
+                <th>Tag</th>
                 <th>Portfolio</th>
                 <th>About me</th>
                 <th>Contact </th>
             </tr>
-            <tr>
+            <tr align="center">
+                <td>&lt;header&gt;</td>
+                <td>&#10003;</td>
+                <td>&#10003;</td>
+                <td>&#10003;</td>
+            </tr>
+            <tr align="center">
+                <td>&lt;title&gt;</td>
+                <td>&#10003;</td>
+                <td>&#10003;</td>
+                <td>&#10003;</td>
+            </tr>
+            <tr align="center">
+                <td>&lt;nav&gt;</td>
+                <td>&#10003;</td>
+                <td>&#10003;</td>
+                <td>&#10003;</td>
+            </tr>
+            <tr align="center">
                 <td>&lt;h1&gt;-&lt;h6&gt;</td>
                 <td>&#10003;</td>
                 <td>&#10003;</td>
                 <td>&#10003;</td>
             </tr>
-            <tr> <center>
+            <tr align="center"> 
                 <td>&lt;br&gt;</td>
                 <td>&#10003; </td>
                 <td>&#10003; </td>
                 <td>&#10003; </td>
-                </center>
             </tr>
-            <tr>
+            <tr align="center">
                 <td> &lt;a&gt; </td>
+                <td>&#10003; </td>
+                <td>&#10003; </td>
+                <td>&#10003; </td>
             </tr>
-            <tr>
-                <td>
-                    &lt;img&gt; 
-                </td>
+            <tr align="center">
+                <td> &lt;img&gt; </td>
+                <td>&#10003; </td>
+                <td>&#10003; </td>
+                <td>&#10003; </td>
             </tr>
-            <tr>
-                <td>
-                    &lt;video&gt; 
-                </td>
+            <tr align="center">
+                <td> &lt;video&gt; </td>
+                <td>&#10003; </td>
+                <td>X </td>
+                <td>X </td>
             </tr>
-            <tr>
-                <td>
-                    &lt;p&gt; 
-                </td>
+            <tr align="center">
+                <td>&lt;p&gt; </td>
+                <td>&#10003; </td>
+                <td>&#10003; </td>
+                <td>&#10003; </td>
+            </tr>
+            <tr align="center">
+                <td>&lt;main&gt;</td>
+                <td>&#10003;</td>
+                <td>&#10003;</td>
+                <td>&#10003;</td>
+            </tr>
+            <tr align="center">
+                <td>&lt;footer&gt;</td>
+                <td>&#10003;</td>
+                <td>&#10003;</td>
+                <td>&#10003;</td>
             </tr>
         </table>
     </body>
