--- a/Aufgabe_2/contact.html
+++ b/Aufgabe_2/contact.html
@@ -24,6 +24,6 @@
         <img src="https://img.icons8.com/ios/100/000000/reddit.png" width="2%"><br>
         keine Ahnung<br><br>
         <img src="https://img.icons8.com/ios/100/000000/facebook-new.png" width="2%"><br>
-        doesnt exist 
+        Wer nutzt noch Facebook?
     </body>
 </html>
