--- a/Aufgabe_2/contact.html
+++ b/Aufgabe_2/contact.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
-
     <head>
-        <meta charset="utf-8">
-        <tilte>Contact me</tilte>
+        <meta charset="utf-8" />
+        <title>Contact me</title>
     </head>
-
     <body>
         <h1>Contact</h1>
         <nav>
@@ -15,15 +13,15 @@
             </h2>
         </nav>
         
-        <img src="https://img.icons8.com/ios/100/000000/important-mail.png" width="2%"><br>
+        <img src="https://img.icons8.com/ios/100/000000/important-mail.png" width="25" alt="email symbol"><br>
         cocosailer@gmail.com<br><br>
-        <img src="https://img.icons8.com/ios/100/000000/instagram-new.png" width="2%"><br>
+        <img src="https://img.icons8.com/ios/100/000000/instagram-new.png" width="25" alt="instagram symbol"><br>
         corinna.sailer<br><br>
-        <img src="https://img.icons8.com/ios/100/000000/twitter.png" width="2%"><br>
+        <img src="https://img.icons8.com/ios/100/000000/twitter.png" width="25" alt="twitter symbol"><br>
         private<br><br>
-        <img src="https://img.icons8.com/ios/100/000000/reddit.png" width="2%"><br>
+        <img src="https://img.icons8.com/ios/100/000000/reddit.png" width="25" alt="reddit symbol"><br>
         keine Ahnung<br><br>
-        <img src="https://img.icons8.com/ios/100/000000/facebook-new.png" width="2%"><br>
+        <img src="https://img.icons8.com/ios/100/000000/facebook-new.png" width="25" alt="facebook symbol"><br>
         Wer nutzt noch Facebook?
     </body>
 </html>
