--- a/Aufgabe_2/me.html
+++ b/Aufgabe_2/me.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
-
     <head>
-        <meta charset="utf-8">
-        <tilte>Corinna Sailer - About me</tilte>
+        <meta charset="utf-8" />
+        <title>About me</title>
     </head>
-
     <body>
         <h1>About me</h1>
         <nav>
