--- a/Aufgabe_2/Portfolio.html
+++ b/Aufgabe_2/Portfolio.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <tilte>Portfolio</tilte>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
+        <title>Portfolio</title>
     </head>
     <body>
         <header>
@@ -15,7 +15,7 @@
                 <a href="contact.html">Contact me</a>
             </h2>
         </nav>
-
+        
         <main>
             <h3>Photography</h3>
                 <img src="BrennendeBlume.jpg" alt="Brennende Blume" width="220">
@@ -26,7 +26,7 @@
 
             <!--<h3>Illustration</h3>
                 <img src="painting.jpg" alt="Illustration" width="450px">
-         <!--       <img src="https://cdn.pixabay.com/photo/2019/02/14/07/28/painting-3995999__340.jpg" alt="Illustration" width="450px">-->
+              <img src="https://cdn.pixabay.com/photo/2019/02/14/07/28/painting-3995999__340.jpg" alt="Illustration" width="450px">-->
              <h3>Musik</h3>
                 <audio src="I_m_Happy_For_This_Guitar.mp3" controls>I'm happy for this guitar</audio>
                 
@@ -36,12 +36,12 @@
 
             <p>und jetzt kommen Sachen dich tatsächlich gemacht habe:</p>
             <h3>Mein kleiner Donut</h3>
-                <img src="donut.png" width="450">    <br>
+                <img src="donut.png" width="450" alt="3D Modell eines Donuts">    <br>
             <h3>Logos</h3>
-                <img src="Logo.jpg" width="450"><br>
+                <img src="Logo.jpg" width="450" alt="Logo: Space Architecture"><br>
                 Ein Logo für ein Schulprojekt.<br>
                 <br>
-                <img src="Saftladen Logo.jpg" width="440"><br>
+                <img src="Saftladen_Logo.jpg" width="440" alt="Logo_Saftladen"><br>
                 Ein Logo für BWL letztes Semester.
             <h3>Und hier ist eine uralte Präsentation über Arts and Crafts</h3>
                 <object data="Präsentation.pdf" type="application/pdf" width="700" height="400"></object>
@@ -53,7 +53,7 @@
         <br>
         <br>
         <footer>
-            Corinna Sailer &copy 2020 <a href="contact.html">Kontakt</a>
+            Corinna Sailer &copy; 2020 <a href="contact.html">Kontakt</a>
         </footer>
     </body>
 </html>
