--- a/Aufgabe_2/contact.html
+++ b/Aufgabe_2/contact.html
@@ -15,8 +15,8 @@
         
         <img src="https://img.icons8.com/ios/100/000000/important-mail.png" width="25" alt="email symbol"><br>
         cocosailer@gmail.com<br><br>
-        <img src="https://img.icons8.com/ios/100/000000/instagram-new.png" width="25" alt="instagram symbol"><br>
-        corinna.sailer<br><br>
+        <a href="https://www.instagram.com/corinna.sailer/"><img src="https://img.icons8.com/ios/100/000000/instagram-new.png" width="25" alt="instagram symbol"><br>
+        corinna.sailer</a><br><br>
         <img src="https://img.icons8.com/ios/100/000000/twitter.png" width="25" alt="twitter symbol"><br>
         private<br><br>
         <img src="https://img.icons8.com/ios/100/000000/reddit.png" width="25" alt="reddit symbol"><br>
