--- a/Aufgabe_2/me.html
+++ b/Aufgabe_2/me.html
@@ -5,29 +5,40 @@
         <title>About me</title>
     </head>
     <body>
-        <h1>About me</h1>
+        <header>
+            <h1>About me</h1>
+        </header>
+        
         <nav>
             <h2>
                 <a href="Portfolio.html">Portfolio</a> •
                 <a href="contact.html">Contact me</a> 
             </h2>
         </nav>
-        <img src="https://sailerco.github.io/GIS_MIB2/Aufgabe%201/Selfie.jpg">
+        <img src="https://sailerco.github.io/GIS_MIB2/Aufgabe%201/Selfie.jpg" alt="Ein Bild von mir">
         
             <p>
                 <b>Name:</b> Corinna Jasmin Sailer<br>
-                <b>Spitzname:</b> Coco<br>
                 <b>Hobbies:</b> Zocken, Zeichnen, lesen<br>
                 <b>Hochschule:</b> Furtwangen<br>
                 <b>Studiengang:</b> MIB<br>
             </p> 
             <section>
         <h3 id="studium">Mein Studium</h3>
-        <p>Ich studiere in Furtwangen (wow was für eine Überraschung) Medieninformatik im 2. Semester. <br> 
+        <p>Ich studiere in Furtwangen <i>(wow was für eine Überraschung)</i> Medieninformatik im 2. Semester. <br> 
         Bisher macht mir das Studium sehr viel Spaß, mal hoffen, dass es so bleibt xD</p>
             </section>
+            <h3>Games die ich mag</h3>
+            <ul>
+                <li>Animal Crossing</li>
+                <li>Sims 4</li>
+                <li>Planet Zoo</li>
+                <li>TTT</li>
+                <li>Assassin’s Creed Games</li>
+                <li>Tomb Raider Games</li>
+                <li><b>Oh wait </b>...das sollte eine "About me" Page werden und nicht eine Aufzählung von Games</li>
+            </ul>
         <h3>Kenntnisse in</h3>
-        <p>
             <ul>
                 <li>InDesign, Illustrator, Photoshop, Premiere Pro, 
                     After Effects, Dreamweaver</li>
@@ -36,6 +47,13 @@
                 <li>3D-Modellierung</li>
                 <li>Java</li>
             </ul>
-        </p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <footer>
+                Corinna Sailer &copy; 2020 <a href="contact.html">Kontakt</a>
+            </footer>
     </body>
 </html>
