--- a/Aufgabe_2/contact.html
+++ b/Aufgabe_2/contact.html
@@ -5,23 +5,26 @@
         <title>Contact me</title>
     </head>
     <body>
-        <h1>Contact</h1>
+        <header>
+            <h1>Contact</h1>
+        </header>
+        
         <nav>
             <h2>
                 <a href="Portfolio.html">Portfolio</a> •
                 <a href="me.html">About me</a>  
             </h2>
         </nav>
-        
-        <img src="https://img.icons8.com/ios/100/000000/important-mail.png" width="25" alt="email symbol"><br>
+        <p>Hier sind meine Kontakte, folgt mir lieber <b>nicht</b> xD</p>
+        <img src="important-mail.png" width="25" alt="email symbol"><br>
         cocosailer@gmail.com<br><br>
-        <a href="https://www.instagram.com/corinna.sailer/"><img src="https://img.icons8.com/ios/100/000000/instagram-new.png" width="25" alt="instagram symbol"><br>
+        <a href="https://www.instagram.com/corinna.sailer/"><img src="instagram-new.png" width="25" alt="instagram symbol"><br>
         corinna.sailer</a><br><br>
-        <img src="https://img.icons8.com/ios/100/000000/twitter.png" width="25" alt="twitter symbol"><br>
+        <img src="twitter.png" width="25" alt="twitter symbol"><br>
         private<br><br>
-        <img src="https://img.icons8.com/ios/100/000000/reddit.png" width="25" alt="reddit symbol"><br>
+        <img src="reddit.png" width="25" alt="reddit symbol"><br>
         keine Ahnung<br><br>
-        <img src="https://img.icons8.com/ios/100/000000/facebook-new.png" width="25" alt="facebook symbol"><br>
+        <img src="facebook-new.png" width="25" alt="facebook symbol"><br>
         Wer nutzt noch Facebook?
     </body>
 </html>
