--- a/Aufgabe_2/contact.html
+++ b/Aufgabe_2/contact.html
@@ -15,7 +15,8 @@
                 <a href="me.html">About me</a>  
             </h2>
         </nav>
-        <p>Hier sind meine Kontakte, folgt mir lieber <b>nicht</b> xD</p>
+        <div>
+        <p>Hier sind meine Kontakte, folgt mir <b>nicht</b> xD</p>
         <img src="important-mail.png" width="25" alt="email symbol"><br>
         cocosailer@gmail.com<br><br>
         <a href="https://www.instagram.com/corinna.sailer/"><img src="instagram-new.png" width="25" alt="instagram symbol"><br>
@@ -26,5 +27,6 @@
         keine Ahnung<br><br>
         <img src="facebook-new.png" width="25" alt="facebook symbol"><br>
         Wer nutzt noch Facebook?
+        </div>
     </body>
 </html>
