--- a/Aufgabe_2/me.html
+++ b/Aufgabe_2/me.html
@@ -38,17 +38,14 @@
                 <li>Tomb Raider Games</li>
                 <li><b>Oh wait </b>...das sollte eine "About me" Page werden und nicht eine Aufzählung von Games</li>
             </ul>
-        <h3>Kenntnisse in</h3>
+        <h3>Paar Sachen mit denen ich teils arbeite</h3>
             <ul>
                 <li>InDesign, Illustrator, Photoshop, Premiere Pro, 
                     After Effects, Dreamweaver</li>
                 <li>HTML5, CSS</li>
-                <li>CAD</li>
                 <li>3D-Modellierung</li>
                 <li>Java</li>
             </ul>
-            <br>
-            <br>
             <br>
             <br>
             <br>
