--- a/Aufgabe_2/tags_used.html
+++ b/Aufgabe_2/tags_used.html
@@ -35,15 +35,63 @@
                 <td>&#10003;</td>
             </tr>
             <tr align="center">
+                <td>&lt;section&gt;</td>
+                <td>X</td>
+                <td>&#10003;</td>
+                <td>X</td>
+            </tr>
+            <tr align="center">
+                <td>&lt;div&gt;</td>
+                <td>X</td>
+                <td>X</td>
+                <td>&#10003;</td>
+            </tr>
+            <tr align="center">
+                <td>&lt;main&gt;</td>
+                <td>&#10003;</td>
+                <td>&#10003;</td>
+                <td>&#10003;</td>
+            </tr>
+            <tr align="center">
+                <td>&lt;footer&gt;</td>
+                <td>&#10003;</td>
+                <td>&#10003;</td>
+                <td>X</td>
+            </tr>
+            <tr align="center">
                 <td>&lt;h1&gt;-&lt;h6&gt;</td>
                 <td>&#10003;</td>
                 <td>&#10003;</td>
                 <td>&#10003;</td>
             </tr>
+            <tr align="center">
+                <td>&lt;ul&gt;</td>
+                <td>X</td>
+                <td>&#10003;</td>
+                <td>X</td>
+            </tr>
+            <tr align="center">
+                <td>&lt;li&gt;</td>
+                <td>X</td>
+                <td>&#10003;</td>
+                <td>X</td>
+            </tr>
             <tr align="center"> 
                 <td>&lt;br&gt;</td>
                 <td>&#10003; </td>
                 <td>&#10003; </td>
+                <td>&#10003; </td>
+            </tr>
+            <tr align="center"> 
+                <td>&lt;b&gt;</td>
+                <td>X </td>
+                <td>X </td>
+                <td>&#10003; </td>
+            </tr>
+            <tr align="center"> 
+                <td>&lt;i&gt;</td>
+                <td>X </td>
+                <td>X </td>
                 <td>&#10003; </td>
             </tr>
             <tr align="center">
@@ -65,22 +113,22 @@
                 <td>X </td>
             </tr>
             <tr align="center">
+                <td> &lt;audio&gt; </td>
+                <td>&#10003; </td>
+                <td>X </td>
+                <td>X </td>
+            </tr>
+            <tr align="center">
+                <td> &lt;object&gt; </td>
+                <td>&#10003; </td>
+                <td>X </td>
+                <td>X </td>
+            </tr>
+            <tr align="center">
                 <td>&lt;p&gt; </td>
                 <td>&#10003; </td>
                 <td>&#10003; </td>
                 <td>&#10003; </td>
-            </tr>
-            <tr align="center">
-                <td>&lt;main&gt;</td>
-                <td>&#10003;</td>
-                <td>&#10003;</td>
-                <td>&#10003;</td>
-            </tr>
-            <tr align="center">
-                <td>&lt;footer&gt;</td>
-                <td>&#10003;</td>
-                <td>&#10003;</td>
-                <td>&#10003;</td>
             </tr>
         </table>
     </body>
