--- a/Aufgabe_2/tags_used.html
+++ b/Aufgabe_2/tags_used.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-
     <head>
-        <meta charset="utf-8">
-        <tilte>genutzte tags</tilte>
+        <meta charset="utf-8" />
+        <title>genutzte Tags</title>
     </head>
 
     <body>
