--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,6 +13,7 @@ body {
 </head>
 <body>
 	<a href="https://github.com/sailerco/GIS_MIB2/issues" target="_blank">Issues</a><br>
+	<a href="https://sailerco.github.io/GIS_MIB2/Aufgabe_3/Portfolio_2.html" target="_blank">Aufgabe 1, 28.04.2020</a> <br>
 	<a href="https://sailerco.github.io/GIS_MIB2/Aufgabe_2/Portfolio.html" target="_blank">Aufgabe 2, 5.05.2020</a> <a href="https://sailerco.github.io/GIS_MIB2/Aufgabe_2/tags_used" target="_blank">tags used 5.05.2020</a><br>
 	<a href="https://sailerco.github.io/GIS_MIB2/Aufgabe%201/index.html" target="_blank">Aufgabe 1, 28.04.2020</a> <br>
 	<a href="https://sailerco.github.io/GIS_MIB2/Steckbrief/Aufgabe_0.html" target="_blank">Aufgabe 0, 22.04.2020</a> <br>
