--- a/Aufgabe_3/Portfolio_2.html
+++ b/Aufgabe_3/Portfolio_2.html
@@ -15,6 +15,7 @@
             <h1>Portfolio</h1>
             <h2>Corinna Sailer</h2>
             <p> studiert Medieninformatik B.Sc.<br>
+    
             <a href="https://www.instagram.com/corinna.sailer/"><img src="instagram.png" width="40" alt="instagram symbol"></a> 
             <a href="https://www.reddit.com"><img src="reddit.png" width="40" alt="reddit symbol"></a> 
             <a href="https://www.twitter.com"><img src="twitter.png" width="40" alt="twitter symbol"></a> 
@@ -46,7 +47,7 @@
             <h3>Arts and Crafts</h3>
                 <object data="Präsentation.pdf" type="application/pdf" width="800" height="550"></object>
             
-            <p>
+            <p id="klein">
                 was ich heute gelernt habe? Hebe Projekte auf sonst wird dein Zukunfts-Ich nichts für Portfolios übrig haben.
             </p>
         </main>
