--- a/Aufgabe_3/contact_2.html
+++ b/Aufgabe_3/contact_2.html
@@ -22,29 +22,15 @@
             </p> 
         </header>
         <br>
-        <div class="eingabe">
+        
         <form>
             <input type="text" value="Vorname"><br>
             <input type="text" value="Nachname"><br>
             <input type="text" value="Email"><br>
-            <input type="textarea" id="Nachricht" value="Nachricht"><br>
+            <textarea id="text" placeholder="Nachricht"></textarea><br>
             <p>Mit Absenden dieser Nachricht bestätige ich den <u>Datenschutz</u></p>
             <input type="submit" value="absenden">
         </form>
-        </div>
-
-        <!--<div>
-        <p>Hier sind meine Kontakte, folgt mir <b>nicht</b> xD</p>
-        <img src="important-mail.png" width="25" alt="email symbol"><br>
-        cocosailer@gmail.com<br><br>
-        <a href="https://www.instagram.com/corinna.sailer/"><img src="instagram-new.png" width="25" alt="instagram symbol"><br>
-        corinna.sailer</a><br><br>
-        <img src="twitter.png" width="25" alt="twitter symbol"><br>
-        private<br><br>
-        <img src="reddit.png" width="25" alt="reddit symbol"><br>
-        keine Ahnung<br><br>
-        <img src="facebook-new.png" width="25" alt="facebook symbol"><br>
-        Wer nutzt noch Facebook?
-        </div>-->
+        
     </body>
 </html>
