--- a/Aufgabe_4/plush.html
+++ b/Aufgabe_4/plush.html
@@ -8,18 +8,12 @@
     <body>
         <div class="head">
             <header>
-                <a href="startseite.html"><img src="Pokestar1.jpg"></a>
+                <a href="startseite.html"><img src="Pokestar1.jpg" alt="Logo"></a>
                 <a href="startseite.html"><h1>Pokéstar</h1></a>
-                <!--<div class="search">
-                    <input type="text" placeholder="Search..?" class="searchsome">
-                    <button type="submit" class="sButton">
-                        <img src="search.png">
-                    </button>
-                </div>-->
                 <div class="cart">
-                    <div class="cart1"><a href="startseite.html"><img src="zuhause.png"></a>
+                    <div class="cart1"><a href="startseite.html"><img src="zuhause.png" alt="home"></a>
                     Home</div>
-                    <div class="cart1"><img src="heart.png" id="heart">
+                    <div class="cart1"><img src="heart.png" id="heart" alt="herat">
                     Like</div>
                     <div class="cart1"><img src="cart.png" alt="cart" id="cart1">
                     Cart</div>
@@ -30,48 +24,48 @@
                     <a href="Pokemon.html"><img src="Pokemon-Logo.jpg" alt=Logo></a>
                     
                     <div class="navy">
-                        <div class="nav1" id="active"><a href="plush.html"><img src="plush.png"></a>
-                        Plush</div>
-                        <div class="nav1"><a href="home.html"><img src="cup.png"></a>
-                        Home & Office</div>
-                        <div class="nav1"><a href="clothing.html"><img src="coat.png"></a>
-                        Clothing</div>
+                        <div class="nav1" id="active"><a href="plush.html"><img src="plush.png" alt="Logo2"></a>
+                        <h4>Plush</h4> </div>
+                        <div class="nav1"><a href="home.html"><img src="cup.png" alt="Logo3"></a>
+                            <h4>Home & Office</h4> </div>
+                        <div class="nav1"><a href="clothing.html"><img src="coat.png" alt="Logo4"></a>
+                            <h4>Clothing</h4> </div>
                     </div>
                 </nav>
         </div>
         
         <div class="shop">
-            <div><img src="poke/plush1.jpg">
+            <div><img src="poke/plush1.jpg" alt="Relaxo">
                 <div class="info">Relaxo Plüschtier            
                     <br>
                     15€
-                    <div class="drop"><img src="heart.png"><img src="cart.png"></div>
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
-            <div><img src="poke/plush2.jpg">
+            <div><img src="poke/plush2.jpg" alt="plushy">
                 <div class="info">Wolly Plüschtier<br>
                     15€          
-                    <div class="drop"><img src="heart.png"><img src="cart.png"></div>
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
 
-            <div><img src="poke/plush3.jpg">
+            <div><img src="poke/plush3.jpg" alt="plush">
                 <div class="info">Pikachu Plüschtier<br>
                     20€               
-                        <div class="drop"><img src="heart.png"><img src="cart.png"></div>
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
-            <div><img src="poke/plush4.jpg">
+            <div><img src="poke/plush4.jpg" alt="plush">
                 <div class="info">Ditto Plüschtier<br>
                     7€
-                    <div class="drop"><img src="heart.png"><img src="cart.png"></div>
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div>
-                <img src="sw/babyyoda.jpg">
+                <img src="sw/babyyoda.jpg" alt="baby yoda">
                 <div class="info">Baby Yoda<br>
-                    40€
-                    <div class="drop"><img src="heart.png"><img src="cart.png"></div>
+                    Preis 40€
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
         </div>
