--- a/Aufgabe_4/startseite.html
+++ b/Aufgabe_4/startseite.html
@@ -8,22 +8,16 @@
     <body>
         <div class="head">
         <header>
-            <a href="startseite.html"><img src="Pokestar1.jpg"></a>
+            <a href="startseite.html"><img src="Pokestar1.jpg" alt="Logo"></a>
             <a href="startseite.html"><h1>Pokéstar</h1></a>
-            <!--<div class="search">
-                <input type="text" placeholder="Search..?" class="searchsome">
-                <button type="submit" class="sButton">
-                    <img src="search.png">
-                </button>
-            </div>-->
-            <div class="cart">
-                <div class="cart1"><a href="startseite.html"><img src="zuhause.png"></a>
-                Home</div>
-                <div class="cart1"><img src="heart.png" id="heart">
-                Like</div>
-                <div class="cart1"><img src="cart.png" alt="cart" id="cart1">
-                Cart</div>
-            </div>
+                <div class="cart">
+                    <div class="cart1"><a href="startseite.html"><img src="zuhause.png" alt="hone"></a>
+                    Home</div>
+                    <div class="cart1"><img src="heart.png" alt="HEART" id="heart">
+                    Like</div>
+                    <div class="cart1"><img src="cart.png" alt="cart" id="cart1">
+                    Cart</div>
+                </div>
         </header>
        
             <nav>
@@ -31,11 +25,11 @@
                 <a href="Pokemon.html"><img src="Pokemon-Logo.jpg" alt=Logo></a>
                 
                 <div class="navy">
-                    <div class="nav1"><a href="plush.html"><img src="plush.png"></a>
+                    <div class="nav1"><a href="plush.html"><img src="plush.png" alt="plush"></a>
                     Plush</div>
-                    <div class="nav1"><a href="home.html"><img src="cup.png"></a>
+                    <div class="nav1"><a href="home.html"><img src="cup.png" alt="cup"></a>
                     Home & Office</div>
-                    <div class="nav1"><a href="clothing.html"><img src="coat.png"></a>
+                    <div class="nav1"><a href="clothing.html"><img src="coat.png" alt="coat"></a>
                     Clothing</div>
                 </div>
             </nav>
@@ -43,10 +37,10 @@
           <p> POKÉSTAR eine Website für Pokémon und Star Wars Fans! </p> 
          <main>    
              <div class="banner">
-                <a href="Pokemon.html"><img src="pokemon.png" class="imagebanner"></a>
+                <a href="Pokemon.html"><img src="pokemon.png" alt="imagebanner"></a>
             </div>
             <div class="banner">
-                <a href="starwars.html"><img src="star-wars.jpg" class="imagebanner"></a>
+                <a href="starwars.html"><img src="star-wars.jpg" alt="imagebanner"></a>
             </div>
         </main>
     </body>
