--- a/Aufgabe_4/starwars.html
+++ b/Aufgabe_4/starwars.html
@@ -10,18 +10,12 @@
 <body>
    <div class="head">
         <header>
-            <a href="startseite.html"><img src="Pokestar1.jpg"></a>
+            <a href="startseite.html"><img src="Pokestar1.jpg" alt="Logo"></a>
             <a href="startseite.html"><h1>Pokéstar</h1></a>
-            <!--<div class="search">
-                    <input type="text" placeholder="Search..?" class="searchsome">
-                    <button type="submit" class="sButton">
-                        <img src="search.png">
-                    </button>
-                </div>-->
                 <div class="cart">
-                    <div class="cart1"><a href="startseite.html"><img src="zuhause.png"></a>
+                    <div class="cart1"><a href="startseite.html"><img src="zuhause.png" alt="home"></a>
                     Home</div>
-                    <div class="cart1"><img src="heart.png" id="heart">
+                    <div class="cart1"><img src="heart.png" alt="HEART" id="heart">
                     Like</div>
                     <div class="cart1"><img src="cart.png" alt="cart" id="cart1">
                     Cart</div>
@@ -43,79 +37,79 @@
     </div>
     <div class="shop">
         <div>
-            <img src="sw/babybag.jpg">
+            <img src="sw/babybag.jpg" alt="baby yoda">
             <div class="info">Baby Yoda Rucksack<br>
                 30€
-                <div class="drop"><img src="heart.png"><img src="cart.png"></div>
+                <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
             </div>
         </div>
         <div>
-            <img src="sw/babyyoda.jpg">
+            <img src="sw/babyyoda.jpg" alt="baby yoda">
             <div class="info">Baby Yoda<br>
-                40€
-                <div class="drop"><img src="heart.png"><img src="cart.png"></div>
+                Preis 40€
+                <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
             </div>
         </div>
-        <div><img src="sw/brotdose-bb-8.jpg">
+        <div><img src="sw/brotdose-bb-8.jpg" alt="BROT">
             <div class="info">BB8 Brotdoes<br>
                 15€
-                <div class="drop"><img src="heart.png"><img src="cart.png"></div>
-            </div>
+                <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
+                </div>
         </div>
-        <div><img src="sw/ewokbag.jpg">
+        <div><img src="sw/ewokbag.jpg" alt="ewok">
             <div class="info">Ewok Rucksack<br>
                 30€
-                <div class="drop"><img src="heart.png"><img src="cart.png"></div>
+                <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
             </div>
         </div>
 
-        <div><img src="sw/lightsaber.jpg">
+        <div><img src="sw/lightsaber.jpg" alt="lichtschwert">
                 <div class="info">Lichtschwert<br>
                     150€
-                    <div class="drop"><img src="heart.png"><img src="cart.png"></div>
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
-            <div><img src="sw/mug.jpg">
+            <div><img src="sw/mug.jpg" alt="tasse">
                 <div class="info">Tasse D-O<br>
                     7€
-                    <div class="drop"><img src="heart.png"><img src="cart.png"></div>
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
-            <div><img src="sw/mug2.jpg">
+            <div><img src="sw/mug2.jpg" alt="tasse">
                 <div class="info">Tasse BB8<br>
                     7€
-                    <div class="drop"><img src="heart.png"><img src="cart.png"></div>
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
-            <div><img src="sw/porg.jpg">
+            <div><img src="sw/porg.jpg" alt="porg">
                 <div class="info">Tasse Porg<br>
                     7€
-                    <div class="drop"><img src="heart.png"><img src="cart.png"></div>
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
 
-            <div><img src="sw/coffee.jpg">
+            <div><img src="sw/coffee.jpg" alt="coffee">
                 <div class="info">R2D2 Kaffekanne<br>
                     30€
-                    <div class="drop"><img src="heart.png"><img src="cart.png"></div>
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
-            <div><img src="sw/Pot.jpg">
+            <div><img src="sw/Pot.jpg" alt="pot">
                 <div class="info">R2D2 Reiskocher<br>
                     90€
-                    <div class="drop"><img src="heart.png"><img src="cart.png"></div>
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
-            <div><img src="sw/toaster.jpg">
+            <div><img src="sw/toaster.jpg" alt="toaster">
                 <div class="info">Darth Vader Toaster<br>
                     30€
-                    <div class="drop"><img src="heart.png"><img src="cart.png"></div>
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
-            <div><img src="sw/waffels.jpg">
+            <div><img src="sw/waffels.jpg" alt="waffels">
                 <div class="info">Star Wars Waffeleisen<br>
                     30€
-                    <div class="drop"><img src="heart.png"><img src="cart.png"></div>
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
         </div>
