--- a/Aufgabe_4/clothing.html
+++ b/Aufgabe_4/clothing.html
@@ -50,13 +50,13 @@
             </div>
             <div>
                 <img src="poke/bag.jpg" alt="eevee"> 
-                <div class="info">EVOLIE RUCKSACK<br>
+                <div class="info">EVOLI RUCKSACK<br>
                     20€               
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>                   
                 </div>
             </div>
             <div><img src="poke/cap.jpg" alt="cap">
-                <div class="info">Ditektiv Pikachu<br>
+                <div class="info">Detektiv Pikachu<br>
                     15€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
