--- a/Aufgabe_4/Pokemon.html
+++ b/Aufgabe_4/Pokemon.html
@@ -37,7 +37,7 @@
         <div class="shop">
             <div>
                 <img src="poke/bag.jpg" alt="eevee"> 
-                <div class="info">EVOLIE RUCKSACK<br>
+                <div class="info">EVOLI RUCKSACK<br>
                     20€               
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                     </div>
@@ -48,7 +48,7 @@
                 <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             <div><img src="poke/cap.jpg" alt="cap">
-                <div class="info">Ditektiv Pikachu<br>
+                <div class="info">Detektiv Pikachu<br>
                     15€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
