--- a/Aufgabe_4/Pokemon.html
+++ b/Aufgabe_4/Pokemon.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div><img src="poke/mug.jpg" alt="tasse">
-                    <div class="info">Tasse<br>
+                    <div class="info"> Gengar Tasse<br>
                     7€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
