--- a/Aufgabe_4/Pokemon.html
+++ b/Aufgabe_4/Pokemon.html
@@ -37,7 +37,8 @@
         <div class="shop">
             <div>
                 <img src="poke/bag.jpg" alt="eevee"> 
-                <div class="info">EVOLI RUCKSACK<br>
+                <div class="info">Evoli Rucksack<br>
+                    <p>weißer Rucksack mit Evoli Theme</p>
                     20€               
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                     </div>
